Bug 319968 - "Some DOM functions don't work in XPCShell (classinfo broken)" [p=Mossop r+sr=jst a1.9=schrep]